--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,5 +26,56 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-sans);
+}
+
+h1 {
+  font-size: 13rem;
+  line-height: 0.95; /* very tight */
+  letter-spacing: -0.05em;
+}
+
+h2 {
+  font-size: 8rem;
+  line-height: 1;
+  letter-spacing: -0.04em;
+}
+
+h3 {
+  font-size: 5rem;
+  line-height: 1.05;
+  letter-spacing: -0.02em;
+}
+
+h4 {
+  font-size: 3rem;
+  line-height: 1.15;
+  letter-spacing: -0.01em;
+}
+
+h5 {
+  font-size: 2rem;
+  line-height: 1.25;
+  letter-spacing: 0;
+}
+
+h6 {
+  font-size: 1rem;
+  line-height: 1.4;
+  letter-spacing: 0.01em;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.6;
+  letter-spacing: 0;
 }
